fix HPA version

--- a/k8s-specifications/result.yaml
+++ b/k8s-specifications/result.yaml
@@ -43,7 +43,7 @@ spec:
   type: ClusterIP
 ---
 # result-hpa.yaml
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: result-hpa
