--- a/k8s-specifications/result.yaml
+++ b/k8s-specifications/result.yaml
@@ -40,7 +40,8 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-  type: ClusterIP
+      nodePort: 31001
+  type: NodePort
 ---
 # result-hpa.yaml
 apiVersion: autoscaling/v1
