--- a/k8s-specifications/vote.yaml
+++ b/k8s-specifications/vote.yaml
@@ -40,7 +40,8 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-  type: ClusterIP
+      nodePort: 31000
+  type: NodePort
 ---
 # vote-hpa.yaml
 apiVersion: autoscaling/v1
