--- a/k8s-specifications/result.yaml
+++ b/k8s-specifications/result.yaml
@@ -20,6 +20,11 @@ spec:
         image: demiesp/result:latest
         ports:
         - containerPort: 80
+         env:
+        - name: REDIS_HOST
+          value: "redis-service"
+        - name: REDIS_PORT
+          value: "6379"
         resources:
           limits:
             cpu: "500m"
