redis en worker y vote

--- a/k8s-specifications/worker.yaml
+++ b/k8s-specifications/worker.yaml
@@ -18,6 +18,11 @@ spec:
       containers:
       - name: worker
         image: demiesp/worker:latest
+        env:
+        - name: REDIS_HOST
+          value: "redis-service"
+        - name: REDIS_PORT
+          value: "6379"
         resources:
           limits:
             cpu: "500m"
